<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_bg">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/title_mode_select"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="?attr/actionBarSize">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPractice"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/practice"
            android:textSize="20sp"
            app:cornerRadius="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTraining"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/training"
            android:textSize="20sp"
            app:cornerRadius="24dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
